--- a/templates/admin.html
+++ b/templates/admin.html
@@ -414,6 +414,7 @@
             height: 40px;
             overflow: hidden;
             display: -webkit-box;
+            line-clamp: 2;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
