--- a/templates/expert_preview.html
+++ b/templates/expert_preview.html
@@ -112,6 +112,7 @@
                             <button class="btn btn-secondary btn-sm" onclick="seekVideo(-10)">-10s</button>
                             <button class="btn btn-secondary btn-sm" onclick="seekVideo(10)">+10s</button>
                             <button class="btn btn-secondary btn-sm" id="use-local-video-btn" type="button">Use downloaded video</button>
+                            <button class="btn btn-secondary btn-sm" id="add-manual-question-btn" type="button" disabled>Add Question</button>
                         </div>
                     </div>
                     <div class="questions-panel">
@@ -304,6 +305,5 @@
 <script src="/assets/js/expert_preview.js" defer></script>
 </body>
 </html>
-
 
 
